syntax = "proto3";

package proto.person.v1;

// The person service definition.
service PersonService {
  rpc Create(CreateRequest) returns (CreateResponse); 
}

message CreateRequest  { Person person = 1; }
message CreateResponse { Person person = 1; }

message Person {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}
